--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -14,14 +14,15 @@
 
             <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="136dp" android:id="@+id/textView" android:textStyle="bold"
+                    android:layout_height="115dp" android:id="@+id/textView" android:textStyle="bold"
                     android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
                     android:gravity="center" android:fontFamily="@font/super_mario_font"
                     android:text="@string/app_name_styled"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:paddingTop="16dp"/>
         </android.support.constraint.ConstraintLayout>
         <LinearLayout
                 android:orientation="vertical"
@@ -98,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent" android:gravity="bottom|center|center_vertical">
             <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="127dp"
                     android:layout_height="wrap_content" android:id="@+id/leaderboardButton"
                     style="@style/Widget.AppCompat.Button.Borderless" android:textAlignment="center"
                     android:gravity="center" android:foregroundGravity="center_vertical|center"
