--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -150,7 +150,7 @@
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
                             android:layout_height="70dp"
-                            android:gravity="bottom|center|center_vertical"
+                            android:gravity="center|center_vertical"
                             android:background="@drawable/rounded_background"
                             android:layout_gravity="bottom" android:id="@+id/gameControllers">
                         <Chronometer
@@ -162,11 +162,11 @@
                                 android:gravity="center"
                                 android:textColor="@color/colorPrimary" android:layout_gravity="center"
                                 android:layout_weight="1" android:layout_marginLeft="32dp"/>
-                        <Button
-                                android:text="❙❙"
-                                android:layout_width="80dp"
-                                android:layout_height="wrap_content" android:id="@+id/pauseButton"
-                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"/>
+                        <ImageButton
+                                android:layout_width="60dp"
+                                android:layout_height="60dp" android:id="@+id/pauseButton"
+                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
+                                android:src="@drawable/icon_pause" android:scaleType="centerInside"/>
                     </LinearLayout>
                     <LinearLayout
                             android:orientation="horizontal"
@@ -198,11 +198,11 @@
                                     android:textColor="@android:color/black" android:layout_marginLeft="16dp"
                                     android:gravity="center_vertical"/>
                         </LinearLayout>
-                        <Button
-                                android:text="↻"
-                                android:layout_width="80dp"
-                                android:layout_height="wrap_content" android:id="@+id/restartButton"
-                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"/>
+                        <ImageButton
+                                android:layout_width="60dp"
+                                android:layout_height="60dp" android:id="@+id/restartButton"
+                                style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
+                                android:src="@drawable/icon_restart" android:scaleType="centerInside"/>
                     </LinearLayout>
 
                 </LinearLayout>
