--- a/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
@@ -6,16 +6,17 @@
 
     <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="70dp"
-            android:gravity="center" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
         <TextView
                 android:text="PLAYER_NAME"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/playerNameField" android:textSize="16sp"
-                android:textStyle="bold" android:layout_weight="1" android:layout_marginRight="16dp"
+                android:layout_height="wrap_content" android:id="@+id/playerNameField" android:textSize="18sp"
+                android:textStyle="bold" android:layout_weight="1"
+                android:layout_marginRight="16dp"
                 android:textColor="@android:color/black"/>
         <TextView
                 android:text="0"
@@ -24,6 +25,6 @@
                 android:textStyle="bold" android:textAlignment="center" android:layout_marginRight="20dp"
                 android:textColor="@android:color/white"
                 android:background="@drawable/cfdialog_positive_button_background_drawable" android:paddingLeft="10dp"
-                android:paddingRight="10dp" android:layout_weight="1"/>
+                android:paddingRight="10dp" android:layout_weight="2"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
