--- a/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="70dp">
+                                             android:layout_height="52dp">
 
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="52dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:gravity="center_vertical">
         <TextView
                 android:text="PLAYER_NAME"
                 android:layout_width="wrap_content"
@@ -20,11 +22,11 @@
                 android:textColor="@android:color/black"/>
         <TextView
                 android:text="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/playerScoreField" android:textSize="16sp"
-                android:textStyle="bold" android:textAlignment="center" android:layout_marginRight="20dp"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content" android:id="@+id/playerScoreField" android:textSize="18sp"
+                android:textStyle="bold" android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:background="@drawable/cfdialog_positive_button_background_drawable" android:paddingLeft="10dp"
-                android:paddingRight="10dp" android:layout_weight="2"/>
+                android:paddingRight="10dp"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
