--- a/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="52dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="52dp">
 
     <LinearLayout
             android:orientation="horizontal"
@@ -29,4 +29,4 @@
                 android:background="@drawable/cfdialog_positive_button_background_drawable" android:paddingLeft="10dp"
                 android:paddingRight="10dp"/>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
