--- a/TicTacToe/app/src/main/res/navigation/nav_graph.xml
+++ b/TicTacToe/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
             app:startDestination="@id/mainFragment">
-    <fragment android:id="@+id/mainFragment" android:name="no.jahnsrud.tictactoe.MainFragment"
+    <fragment android:id="@+id/mainFragment" android:name="no.jahnsrud.tictactoe.fragments.MainFragment"
               android:label="fragment_main" tools:layout="@layout/fragment_main">
         <action android:id="@+id/action_mainFragment_to_startFragment"
                 app:destination="@+id/startFragment"
@@ -13,15 +13,15 @@
                 app:enterAnim="@anim/slide_in_bottom" app:popEnterAnim="@anim/slide_in_top"/>
     </fragment>
     <fragment android:id="@+id/gameFragment"
-              android:name="no.jahnsrud.tictactoe.GameFragment"
+              android:name="no.jahnsrud.tictactoe.fragments.GameFragment"
               android:label="fragment_game"
               tools:layout="@layout/fragment_game"/>
 
-    <fragment android:id="@+id/startFragment" android:name="no.jahnsrud.tictactoe.PlayersFragment"
+    <fragment android:id="@+id/startFragment" android:name="no.jahnsrud.tictactoe.fragments.PlayersFragment"
               android:label="fragment_start" tools:layout="@layout/fragment_players">
         <action android:id="@+id/action_startFragment_to_gameFragment" app:destination="@id/gameFragment"
                 app:enterAnim="@anim/fade_in" app:popEnterAnim="@anim/fade_in" app:popUpTo="@+id/mainFragment"/>
     </fragment>
-    <fragment android:id="@+id/leaderboardFragment" android:name="no.jahnsrud.tictactoe.LeaderboardFragment"
+    <fragment android:id="@+id/leaderboardFragment" android:name="no.jahnsrud.tictactoe.fragments.LeaderboardFragment"
               android:label="fragment_leaderboard" tools:layout="@layout/fragment_leaderboard"/>
 </navigation>
