--- a/TicTacToe/app/src/main/res/layout/fragment_players.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_players.xml
@@ -16,16 +16,17 @@
                 android:fontFamily="@font/super_mario_font"
                 tools:layout_editor_absoluteX="44dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:textAlignment="center"/>
+                android:textAlignment="center" android:layout_marginBottom="8dp"/>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="20dp" app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="100dp" app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="100dp" android:padding="24dp"
-                android:background="@drawable/rounded_background" android:id="@+id/linearLayout">
+                android:background="@drawable/rounded_background" android:id="@+id/linearLayout"
+                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
